--- a/css/style.css
+++ b/css/style.css
@@ -658,7 +658,7 @@ h3.my-profession
 .portfolio .portfolio-item-inner
 {
     border: 6px solid var(--bg-black-100);
-    border-radius: 10px;
+    border-radius: 20px;
     overflow: hidden;
     cursor: pointer;
 }
@@ -677,6 +677,10 @@ h3.my-profession
     text-transform: capitalize;
     margin: 5px 0 5px;
 }
+/* .portfolio .portfolio-item .portfolio-item-inner:hover
+{
+    box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
+} */
 /* Contact */
 .contact-title
 {
